# InstantMessageCharSoftware

./: .gitattributes  .gitignore
Client/InstantMessage/: HttpMgr.cpp  HttpMgr.h  InstantMessage.pro  Singleton.hpp  clickedlabel.cpp  clickedlabel.h  global.cpp  global.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rc.qrc  registerdialog.cpp  registerdialog.h  registerdialog.ui  resetdialog.cpp  resetdialog.h  resetdialog.ui  timerbtn.cpp  timerbtn.h
Client/InstantMessage/style/: stylesheet.qss
GateServer/: CMakeLists.txt  CServer.cpp  GateServer.cpp  HttpConnection.h  Singleton.hpp
Server/GateServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
Server/VerifyServer/: config.json  email.js  package-lock.json  package.json  redis.js  server.js
